# pacman-rs

./: .gitignore  Cargo.toml  build.bat  run.bat
gl/: Cargo.toml  build.rs
macos/PacMan/: AppDelegate.m  AppDelegate.swift  BuildRustLib.sh  Info.plist  MyOpenGLView.swift  OpenGLLayer.h  OpenGLLayer.m  OpenGLView.h  OpenGLView.m  PacMan-Bridging-Header.h  ViewController.h  ViewController.m  ViewController.swift
macos/PacMan.xcodeproj/: project.pbxproj
macos/PacMan.xcodeproj/project.xcworkspace/xcuserdata/coeuvre.xcuserdatad/: UserInterfaceState.xcuserstate
macos/PacMan/Base.lproj/: Main.storyboard
macos/PacManTests/: PacManTests.swift
macos/PacManUITests/: PacManUITests.swift
platform/: Cargo.toml
platform/src/: lib.rs
profiler/: Cargo.toml
profiler-macro/: Cargo.toml
profiler-macro/src/: lib.rs
profiler/src/: lib.rs
rust/: Cargo.toml  pacman.h
rust/bridge/: Cargo.toml
rust/bridge/src/: bridge.h  bridge.rs  lib.rs  logger.rs  pacman.h
rust/platform/src/: lib.rs  win32.rs
rust/src/: game.rs  image.rs  lib.rs  logger.rs
rust/stb/: build.rs
rust/stb/src/: lib.rs  stb_image.rs
src/: asset.rs  bitmap.rs  canvas.rs  game.rs  gl_context.rs  image.rs  lib.rs  main.rs  math.rs  profiler.rs  renderer.rs  tree.rs  win_entry.rs
src/bridge/: Cargo.toml
src/bridge/src/: bridge.h  bridge.rs  lib.rs
src/game/: Cargo.toml  lib.rs
src/main/: Cargo.toml  dynamic_library.rs  main.rs
src/renderer/: quad.rs  render_line.rs  render_triangle.rs
src/stb/: Cargo.toml
src/stb/src/: stb_image.rs
stb-sys/: Cargo.toml  build.rs
stb-sys/src/: image.rs  lib.rs
vectree/: Cargo.toml
vectree/src/: lib.rs
windows/: PacMan.sln
windows/PacMan/: PacMan.aps  PacMan.cpp  PacMan.rc  PacMan.vcxproj  PacMan.vcxproj.filters  resource.h  stdafx.h
