[package]
name = "pacman"
version = "0.1.0"
edition = "2018"

[dependencies]
failure = "0.1"
freetype-rs = "0.19"

gl = { path = "gl" }
profiler = { path = "profiler" }

[dependencies.sdl2-sys]
version = "0.32"
features = ["bundled", "static-link"]

[dependencies.stb-sys]
path = "stb-sys"
features = ["image"]

[workspace]
members = [
    "gl",
    "stb-sys",
    "vectree",
    "profiler",
    "profiler-macro",
]