[package]
name = "platform"
version = "0.1.0"
authors = ["Coeuvre Wong <coeuvre@gmail.com>"]

[dependencies]
lazy_static = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "shellscalingapi", "errhandlingapi", "processthreadsapi", "profileapi"] }