[package]
name = "profiler"
version = "0.1.0"
authors = ["Coeuvre Wong <coeuvre@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.2"

vectree = { path = "../vectree" }
profiler-macro = { path = "../profiler-macro" }

[dependencies.sdl2-sys]
version = "0.32"
features = ["bundled", "static-link"]
